--- a/templates/download.html
+++ b/templates/download.html
@@ -8,7 +8,7 @@
 </head>
 <body>
         <H1>File downloaded</H1>
-        <iframe src="../download.html" width="500px" height="500px"></iframe>
+        <iframe src="/home/cherry/RevaProjects/download.pdf" width="500px" height="500px"></iframe>
         <h1>{{data}}</h1>
 </body>
 </html>
