--- a/templates/preview.html
+++ b/templates/preview.html
@@ -12,6 +12,7 @@
         <div id="fram" style="height: 800px;">
         </div>
     </div>
+    <img src="/static/img/img1.jpg"></img>
 </body>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
