--- a/templates/preview.html
+++ b/templates/preview.html
@@ -19,7 +19,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfobject/2.2.5/pdfobject.js" integrity="sha512-eCQjXTTg9blbos6LwHpAHSEZode2HEduXmentxjV8+9pv3q1UwDU1bNu0qc2WpZZhltRMT9zgGl7EzuqnQY5yQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script>
         var viewpdf=$("#fram")
-        PDFObject.embed("/static/files/{{data}}",viewpdf)
+        PDFObject.embed("/static/files/6IBGPPYNZSAXTKB7HSA3Y4V3XO9337I4.pdf",viewpdf)
     </script>
 
     
