--- a/templates/preview.html
+++ b/templates/preview.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>{{data}}</h1>
     <div class="testing">
         <div id="fram" style="height: 800px;">
         </div>
